# vector-recommender

./: .env.example  README.md  pyproject.toml
config/: __init__.py  settings.py
notebooks/: 03_semantic_embeddings.ipynb  Data_processing_tmdb_5000_movie_dataset.ipynb  EDA_tmdb_5000_movie_dataset.ipynb
scripts/: demo_movie.py
src/vector_recommender/: logger.py
src/vector_recommender/domain/: movie.py
src/vector_recommender/ingestion/tmdb/: client.py  mapper.py  service.py
src/vector_recommender/ml/: semantic_recommender.py  text_processing.py
tests/: conftest.py
tests/ingestion/tmdb/: test_client.py  test_mapper.py
tests/ml/: test_semantic_recommender.py
web/: app.py
